# choroboros-open-source

./: .dockerignore  .gitignore  BROWSER_INSTRUCTIONS.md  CHANGELOG.md  CLEAR_CACHE_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  COPYING  CUSTOMER_INSTALL_INSTRUCTIONS.md  DAW_RESCAN_INSTRUCTIONS.md  DISTRIBUTION.md  DOCKER_GUIDE.md  Dockerfile.linux  Dockerfile.linux-test  EULA.md  FINAL_GUMROAD_CHECKLIST.md  FIX_MACOS_SECURITY.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_ACTIONS_QUICK_START.md  GITHUB_BILLING_FIX.md  GPL_COMPLIANCE_CHECKLIST.md  GPL_COMPLIANCE_ISSUE.md  GPL_COMPLIANCE_SUMMARY.md  GPL_NOTICE.md  GUMROAD_LISTING.md  GUMROAD_RECEIPT_SETTINGS.md  INSTALL.txt  Install Choroboros.command  LICENSE  MULTI_PLATFORM_BUILD_PLAN.md  PACKAGING.md  PLATFORM_BUILD_STATUS.md  README.md  RELEASE_PREPARATION_SUMMARY.md  REPO_DESCRIPTION.md  SALES_SETUP_GUIDE.md  SOURCE_LINK.txt  TODO.md  TODO_AAX.md  UX_ANALYSIS.md  (+11 more)
.github/workflows/: build-all-platforms.yml  build-linux.yml  build-windows.yml
Documentation/: BBD_DSP_REFERENCES.md  Online Documentation.url  Online Read Me and Release Information.url  WHITEPAPER.md
Licenses/Third Party/Native Instruments USA/: license.txt
Licenses/Third Party/ableton/: LICENSE.txt
Licenses/Third Party/bzip2/bzip2_106/: LICENSE.txt
Licenses/Third Party/cairo/cairo-1.15.12/: SrcOfferMPL.txt
Licenses/Third Party/expat/expat226/: COPYING.txt
Licenses/Third Party/libdaemon/: LICENSE_LGPL21.txt
Licenses/Third Party/liblockfile/liblockfile109/: SrcOfferLGPL.txt
Licenses/Third Party/linux/lux26376/: COPYING.txt  SrcOfferLinux.txt
Licenses/Third Party/lm63/lm63_01/: SrcOfferGPL.txt
Licenses/Third Party/ncurses/: COPYING.txt
Licenses/Third Party/protobuf/protobuf360/: License.txt
Licenses/Third Party/uboot/ubt201006/: COPYING.txt
Licenses/Third Party/vis-network/: LICENSE.txt
Licenses/Third Party/yaml-cpp/yaml_025/: license.txt
Licenses/Third Party/zlib/: _zlib_license.txt
Source/Config/: DefaultsPersistence.cpp  DefaultsPersistence.h
Source/Cores/: ChorusCore.h
Source/Cores/black_engine_linear/: ChorusCoreLinear.cpp  ChorusCoreLinear.h  ChorusCoreLinearEnsemble.cpp  ChorusCoreLinearEnsemble.h
Source/Cores/blue_engine_modern/: ChorusCoreCubic.cpp  ChorusCoreCubic.h  ChorusCoreThiran.cpp  ChorusCoreThiran.h
Source/Cores/green_engine_classic/: ChorusCoreLagrange3rd.cpp  ChorusCoreLagrange3rd.h  ChorusCoreLagrange5th.cpp  ChorusCoreLagrange5th.h
Source/Cores/purple_engine_experimental/: ChorusCoreOrbit.cpp  ChorusCoreOrbit.h  ChorusCorePhaseWarped.cpp  ChorusCorePhaseWarped.h
Source/Cores/red_engine_vintage/: ChorusCoreBBD.cpp  ChorusCoreBBD.h  ChorusCoreTape.cpp  ChorusCoreTape.h
Source/DSP/: BBDCascadeFilter.h  BBDFilterDesign.h  ChorusDSP.cpp  ChorusDSP.h  ChorusDSPPrepare.cpp  ChorusDSPPrepare.h  ChorusDSPProcess.cpp  ChorusDSPProcess.h  CoreAssignments.h
Source/Plugin/: AboutDialog.cpp  AboutDialog.h  FeedbackCollector.cpp  FeedbackCollector.h  FeedbackDialog.cpp  FeedbackDialog.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: AnimatedToggleButton.cpp  AnimatedToggleButton.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  DevPanel.cpp  DevPanel.h  DevPanelBuildContext.h  DevPanelConsole.cpp  DevPanelPersistence.cpp  DevPanelRuntime.cpp  DevPanelSupport.h  DevPanelTabBuilders.cpp  LabelWithContainer.cpp  LabelWithContainer.h  PluginEditor.cpp  PluginEditorSetup.cpp  PluginEditorSetup.h  SmoothedSlider.cpp  SmoothedSlider.h
Tests/: ChoroborosRegressionTests.cpp
docs/: CONSOLE_AUTOCOMPLETE.json  DEV_PANEL_CONSOLE_MANUAL.md  DEV_PANEL_CONTENTS.md  DEV_PANEL_MANUAL.md  DEV_PANEL_SPEC.md  ENGINE_CONTENT_CORRECTED.md  ENGINE_SWITCH_ARTIFACTS_ANALYSIS.md  GITHUB_MERGE_ANALYSIS.md  GITHUB_MERGE_GUARDRAILS.md  KNOWN_ISSUES.md  README.md  TECHNICAL_SPECS_CORRECTIONS.md  WEBSITE_DOWNLOAD_PAGE_BRIEFING.md  choroboros_docs.html
docs/archive/: CLEAR_CACHE_INSTRUCTIONS.md  CUSTOMER_INSTALLATION_SUMMARY.md  GUMROAD_COPY_READY_TO_PASTE.md  GUMROAD_LISTING.md  LICENSE_UPDATE_SUMMARY.md  PACKAGE_STATUS.md  PLATFORM_BUILD_STATUS.md  build_windows.md
docs/archive/assets/: README.md
docs/developer/: DEV_PANEL_V2_EXECUTION_TIMELINE.md  audio_overview_prototype.html
docs/user/: USER_MANUAL.md
scripts/: README.md  build_macos_universal.sh  create_uno_issues.sh  devpanel_recent_touches.sh  reinstall_plugin.sh  trace_load_performance_macos.sh  verify_merge_guardrails.sh
windows/: AGENT_CONTEXT.md  CHECKLIST.md  HOST_PLUGIN_PATHS.md  README.md  RELEASE_CHECKLIST_HARD.md  build_windows_x64.bat  build_windows_x64.ps1  build_windows_x86.bat  build_windows_x86.ps1  capture_reaper_crash.ps1  install_vst3_user.ps1  package_windows_release.ps1  preflight.ps1  run_regression.ps1  trace_effective_defaults.ps1  trace_load_performance.ps1  windows_factory_defaults.json
